Feat: add timer

--- a/pages/game.html
+++ b/pages/game.html
@@ -21,9 +21,13 @@
     <title>Jogo da memória</title>
   </head>
   <body>
-    <div class="game">
-      <main class="game__grid">
-      </main>
-    </div>
+    <div class="game__background"></div>
+    <main class="game">
+      <header class="game__header">
+        <span class="game__player"></span>
+        <span>Tempo: <span class="game__timer"></span></span>
+      </header>
+      <div class="game__grid"></div>
+    </main>
   </body>
 </html>
