--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <title>Jogo da memória</title>
   </head>
   <body>
-    <div class="login-container">
+    <main class="login-container">
       <form class="login">
         <header class="login__header">
-          <img class="login__header__image" src="assets/brain.png" alt="brain" />
+          <img class="login__header__image" src="assets/brain.jpg" alt="brain" />
           <h1 class="login__header__title">jogo da memória</h1>
         </header>
         <input type="text" placeholder="Nome" class="login__input" />
         <button type="submit" class="login__button" disabled>Jogar</button>
       </form>
-    </div>
+    </main>
   </body>
 </html>
