--- a/pages/game.html
+++ b/pages/game.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- font awesome -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <!-- styles -->
@@ -24,8 +25,14 @@
     <div class="game__background"></div>
     <main class="game">
       <header class="game__header">
+        <button class="game__back">
+          <i class="fa-solid fa-arrow-left"></i>
+        </button>
         <span class="game__player"></span>
         <span>Tempo: <span class="game__timer"></span></span>
+        <button class="game__restart">
+          <i class="fa-solid fa-rotate-left"></i>
+        </button>
       </header>
       <div class="game__grid"></div>
     </main>
