--- a/pages/game.html
+++ b/pages/game.html
@@ -13,6 +13,14 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- styles -->
     <link rel="stylesheet" href="../sass/main.css" />
 
