--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
     <div class="login__background"></div>
     <main class="login-container">
       <form class="login">
-        <header class="login__header">
-          <img
-            class="login__header__image"
-            src="assets/brain.jpg"
-            alt="brain"
-          />
-          <h1 class="login__header__title">jogo da memória</h1>
-        </header>
+        <h1 class="login__title">jogo da memória</h1>
         <input type="text" placeholder="Nome" class="login__input" />
         <button type="submit" class="login__button" disabled>Jogar</button>
       </form>
