Feat: add cards amount button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <form class="login">
         <h1 class="login__title">jogo da memória</h1>
         <input type="text" placeholder="Nome" class="login__input" />
+        <div class="login__amount">
+          <button type="button" class="login__amount-num" value="2">4</button>
+          <button type="button" class="login__amount-num" value="4">8</button>
+          <button type="button" class="login__amount-num" value="6">12</button>
+          <button type="button" class="login__amount-num" value="10">20</button>
+        </div>
         <button type="submit" class="login__button" disabled>Jogar</button>
       </form>
     </main>
