Feat: best time

--- a/pages/game.html
+++ b/pages/game.html
@@ -43,6 +43,11 @@
         </button>
       </header>
       <div class="game__grid"></div>
+      <footer class="game__footer">
+        <p>Melhor tempo:</p>
+        <span class="game__footer-player"></span>
+        <span class="game__footer-time"></span>
+      </footer>
     </main>
   </body>
 </html>
