--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <form class="login">
         <h1 class="login__title">jogo da memória</h1>
         <input type="text" placeholder="Nome" class="login__input" />
+        <p class="login__error hide">Insira entre 3 e 10 caracteres</p>
         <div class="login__amount">
           <button type="button" class="login__amount-num" value="2">4</button>
           <button type="button" class="login__amount-num" value="4">8</button>
