Style: login indentation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <div class="login__background"></div>
     <main class="login-container">
       <form class="login">
-        <h1 class="login__title">jogo da memória</h1>
+        <h1 class="login__title">
+          <span>jogo</span>
+          <span>da</span>
+          <span>memória</span>
+          </h1>
         <input type="text" placeholder="Nome" class="login__input" />
         <p class="login__error hide">Insira entre 3 e 10 caracteres</p>
         <div class="login__amount">
