Feat: pause/play game functions

--- a/pages/game.html
+++ b/pages/game.html
@@ -34,9 +34,9 @@
     <div class="game-background"></div>
     <main class="game">
       <header class="game__header">
-        <div class="game__header-buttons">
-          <button class="button button--circle" data-button="back">
-            <i class="fa-solid fa-arrow-left" data-icon="back"></i>
+        <div class="game__header-buttons" data-buttons="header">
+          <button class="button button--circle" data-button="return">
+            <i class="fa-solid fa-arrow-left" data-icon="return"></i>
           </button>
           <button class="button button--circle" data-button="restart">
             <i class="fa-solid fa-rotate-left" data-icon="restart"></i>
@@ -52,7 +52,7 @@
         </div>
       </header>
 
-      <div class="game__grid" data-element="grid"></div>
+      <div class="game__container" data-element="container"></div>
 
       <footer class="game__footer">
         <p>Melhor tempo:</p>
