Fix: create an utility function for shuffle images and improve grid classes

--- a/pages/game.html
+++ b/pages/game.html
@@ -52,7 +52,9 @@
         </div>
       </header>
 
-      <div class="game__container" data-element="container"></div>
+      <div class="game__container">
+        <div class="game__container--grid" data-element="container"></div>
+      </div>
 
       <footer class="game__footer">
         <p>Melhor tempo:</p>
