--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <!-- styles -->
-    <link rel="stylesheet" href="sass/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <!-- script -->
     <script defer src="./js/login.js"></script>
