--- a/pages/game.html
+++ b/pages/game.html
@@ -22,7 +22,7 @@
     />
 
     <!-- styles -->
-    <link rel="stylesheet" href="../sass/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <!-- script -->
     <script defer src="../js/game.js"></script>
